--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,11 +17,10 @@ jobs:
             repoName: Box
             branchName: main
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
+      - name: Checkout the code
+        uses: actions/checkout@v2
       - name: Set up JDK
-      - uses: actions/cache@v3
-        if: ${{ env.commit }}
+        uses: actions/setup-java@v1
         with:
           java-version: 1.8
       - id: get-project
@@ -34,37 +33,9 @@ jobs:
         run: |
           if [ ! -f "gradlew" ]; then gradle wrapper; fi
           chmod +x gradlew
-          ./gradlew assemblerelease --build-cache --parallel --daemon --warning-mode all
-      - name: Prepare App
-        if: ${{ env.commit }}
-        working-directory: TVBoxOSC
-        run: |
-          rm -rf apk/
-          mkdir -p apk/
-          for file in `find ~ -name "*release*.apk" -print`; do
-            mv "$file" apk/TVBox_${{ matrix.userName }}_${{ env.tag }}.apk
-          done
-      - name: Upload App To Artifact
-        uses: actions/upload-artifact@v3
-        if: ${{ env.commit }}
+          ./gradlew assembleDebug --stacktrace
+      - name: Upload APK
+        uses: actions/upload-artifact@v2
         with:
-          name: ${{ matrix.userName }}-${{ matrix.repoName }}
-          path: TVBoxOSC/apk/*
-      - name: Whether Or Not to Publish
-        if: ${{ inputs.donotpublish && env.commit }}
-        run: |
-          echo "commit=" >> $GITHUB_ENV
-      - name: Release and Upload Assets
-        uses: softprops/action-gh-release@v1
-        if: ${{ env.commit }}
-        with:
-          name: ${{ env.tag }}
-          tag_name: ${{ env.tag }}
-          body: "Credit: ${{ matrix.userName }}/${{ matrix.repoName }}\n
-                 Commit: ${{ env.commit }}"
-          files: |
-            TVBoxOSC/apk/*
-            TVBoxOSC/${{ env.commitS }}-source.zip
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      
+          name: TVBOX
+          path: TVBoxOSC/app/build/outputs/apk/debug/*.apk
