--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,7 +24,7 @@ jobs:
         with:
           java-version: 1.8
       - name: Clone project
-        run: git clone --depth=1 ${{ steps.get-project.outputs.PROJECT }} TVBoxOSC
+        run: git clone ${{ env.upStream }} TVBoxOSC
       - name: Build the app
         working-directory: ./TVBoxOSC
         run: |
