--- a/.github/workflows/TVBox_build.yml
+++ b/.github/workflows/TVBox_build.yml
@@ -15,7 +15,7 @@ jobs:
             repoName: TVBoxOS
             branchName: main
           - userName: wwz09
-            repoName: Box
+            repoName: QBox
             branchName: main
     steps:
       - name: Checkout
