--- a/.github/workflows/test_TVBox.yml
+++ b/.github/workflows/test_TVBox.yml
@@ -14,7 +14,7 @@ jobs:
             repoName: TVBoxOS
             branchName: main
           - userName: wwz09
-            repoName: Box
+            repoName: QBox
             branchName: main
     steps:
       - name: Checkout the code
