--- a/.github/workflows/TVBox_build.yml
+++ b/.github/workflows/TVBox_build.yml
@@ -68,7 +68,7 @@ jobs:
           #添加arm64支持，不支持ijk解码
           sed -i "/armeabi-v7a[\'\"]$/s#\$#, 'arm64-v8a'#" app/build.gradle
           sed -i "/armeabi-v7a[\'\"]$/s#\$#, 'arm64-v8a'#" player/build.gradle
-          sed -i 's/TVBox/${{ matrix.userName }}/g' app/src/main/res/values/strings.xml
+          sed -i 's/TVBox/${{ matrix.repoName }}/g' app/src/main/res/values/strings.xml
       - name: Release Apk Sign
         if: ${{ env.commit }}
         working-directory: TVBoxOSC
