--- a/.github/workflows/test_TVBox.yml
+++ b/.github/workflows/test_TVBox.yml
@@ -11,11 +11,11 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - userName: wwz09
+          - userName: q215613905
             repoName: TVBoxOS
             branchName: main
-          - userName: wwz09
-            repoName: QBox
+          - userName: takagen99
+            repoName: Box
             branchName: main
     steps:
       - name: Checkout
