--- a/.github/workflows/TVBox_build.yml
+++ b/.github/workflows/TVBox_build.yml
@@ -123,7 +123,7 @@ jobs:
         with:
           name: ${{ env.tag }}
           tag: ${{ env.tag }}
-          bodyFile: ${{ matrix.repoName }}/apk/${{ matrix.userName }}-Release.log
+          bodyFile: ${{ matrix.repoName }}/apk/${{ matrix.repoName }}-Release.log
           allowUpdates: true
           removeArtifacts: true
           artifacts: |
