--- a/.github/workflows/TVBox_build.yml
+++ b/.github/workflows/TVBox_build.yml
@@ -133,7 +133,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       
-      - name: Push to master
+      - name: Push to main
         if: ${{ env.commit }}
         run: |
           rm -rf ${{ matrix.repoName }}
@@ -144,6 +144,6 @@ jobs:
           git remote set-url --add origin "https://${{ github.actor }}:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}"
           git add --all
           git commit -m "${{ env.commit }}"
-          git push -u -f origin master   
+          git push -u -f origin main   
       
       
