--- a/.github/workflows/TVBox_build.yml
+++ b/.github/workflows/TVBox_build.yml
@@ -110,21 +110,26 @@ jobs:
         uses: actions/upload-artifact@v3
         if: ${{ env.commit }}
         with:
-          name: ${{ matrix.userName }}-${{ matrix.repoName }}
+          name: ${{ matrix.repoName }}
           path: ${{ matrix.repoName }}/apk/*
+             
+      - name: Whether Or Not to Publish
+        if: ${{ inputs.donotpublish && env.commit }}
+        run: |
+          echo "commit=" >> $GITHUB_ENV
           
       - name: Release and Upload Assets
-        uses: softprops/action-gh-release@v1
+        uses: ncipollo/release-action@v1
         if: ${{ env.commit }}
         with:
           name: ${{ env.tag }}
-          tag_name: ${{ env.tag }}
-          body: ${{ env.commit }}
-          files: |
-            ${{ matrix.repoName }}/apk/*
-            ${{ matrix.repoName }}/${{ env.commitS }}-source.zip
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          tag: ${{ env.tag }}
+          bodyFile: ${{ matrix.repoName }}/apk/${{ matrix.userName }}-Release.log
+          allowUpdates: true
+          removeArtifacts: true
+          artifacts: |
+            ${{ matrix.repoName }}/apk/*.apk
+            ${{ matrix.repoName }}/source-${{ env.commitS }}.zip}
       
       - name: Push to master
         if: ${{ env.commit }}
