--- a/.github/workflows/TVBox_build.yml
+++ b/.github/workflows/TVBox_build.yml
@@ -97,15 +97,17 @@ jobs:
         run: |
           chmod +x gradlew
           ./gradlew assemblerelease --build-cache --parallel --daemon --warning-mode all
+      
       - name: Prepare App
         if: ${{ env.commit }}
         working-directory: ${{ matrix.repoName }}
         run: |
           rm -rf apk/
           mkdir -p apk/
-          for file in `find ~ -name "*release*.apk" -print`; do
-            mv "$file" apk/TVBox_${{ matrix.userName }}_${{ env.tag }}.apk
+          for file in `find ~ -name "*.apk" -print`; do
+            mv "$file" apk/
           done
+      
       - name: Upload App To Artifact
         uses: actions/upload-artifact@v3
         if: ${{ env.commit }}
@@ -124,9 +126,6 @@ jobs:
         with:
           name: ${{ env.tag }}
           tag: ${{ env.tag }}
-          bodyFile: ${{ matrix.repoName }}/apk/TVBox_${{ matrix.userName }}_${{ env.tag }}.apk
-          allowUpdates: true
-          removeArtifacts: true
           artifacts: |
             ${{ matrix.repoName }}/apk/*.apk
             ${{ matrix.repoName }}/source-${{ env.commitS }}.zip}
