--- a/.github/workflows/TVBox_build.yml
+++ b/.github/workflows/TVBox_build.yml
@@ -44,7 +44,7 @@ jobs:
         if: ${{ env.commit }}
         working-directory: ${{ matrix.repoName }}
         run: |
-          sed -i 's%"app_name">TVBox</string>%$"app_name">${{ matrix.repoName }}</string>%g' app/src/main/res/values/strings.xml   #名称修改
+          sed -i 's%TVBox</string>%${{ matrix.repoName }}</string>%g' app/src/main/res/values/strings.xml   #名称修改
           sed -i 's%(HawkConfig.API_URL, "");%(HawkConfig.API_URL, "https://agit.ai/wwz09/ubuntu/raw/branch/master/box1.json");%g' app/src/main/java/com/github/tvbox/osc/api/ApiConfig.java   
           sed -i 's%HomeActivity.getRes().getString(R.string.app_source));% "https://agit.ai/wwz09/ubuntu/raw/branch/master/box1.json");%g' app/src/main/java/com/github/tvbox/osc/api/ApiConfig.java  
            
