--- a/.github/workflows/test_TVBox.yml
+++ b/.github/workflows/test_TVBox.yml
@@ -14,8 +14,8 @@ jobs:
           - userName: q215613905
             repoName: TVBoxOS
             branchName: main
-          - userName: takagen99
-            repoName: Box
+          - userName: jinqiusky
+            repoName: TVBoxOSC-P
             branchName: main
     steps:
       - name: Checkout
