--- a/.github/workflows/test_TVBox.yml
+++ b/.github/workflows/test_TVBox.yml
@@ -17,12 +17,12 @@ jobs:
           - userName: takagen99
             repoName: Box
             branchName: main
-          - userName: kensonmiao
-            repoName: CatVodTVOSC
+          - userName: llazyl
+            repoName: TVBox
             branchName: main
-          - userName: FongMi
-            repoName: TV
-            branchName: dev
+          - userName: springfine
+            repoName: TVBoxOSC-1
+            branchName: main
     steps:
       - name: Checkout
         uses: actions/checkout@v3
