--- a/.github/workflows/TVBox_build.yml
+++ b/.github/workflows/TVBox_build.yml
@@ -17,6 +17,9 @@ jobs:
           - userName: wwz09
             repoName: TBox
             branchName: main
+          - userName: wwz09
+            repoName: MaoTV
+            branchName: main
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -45,6 +48,9 @@ jobs:
         working-directory: ${{ matrix.repoName }}
         run: |
           cp -rf $GITHUB_WORKSPACE/DIY/values-zh app/src/main/res/values-zh
+          cp -rf $GITHUB_WORKSPACE/DIY/xwalk_shared_library-23.53.589.4.aar app/libs/xwalk_shared_library-23.53.589.4.aar
+          cp -rf $GITHUB_WORKSPACE/DIY/thunder.jar app/libs/thunder.jar
+          cp -rf $GITHUB_WORKSPACE/DIY/pyramid.aar app/libs/pyramid.aar
           sed -i 's%TVBox%${{ matrix.repoName }}%g' app/src/main/res/values/strings.xml
           sed -i 's%TVBox%${{ matrix.repoName }}%g' app/src/main/res/values-zh/strings.xml
           sed -i 's%HawkConfig.HOME_REC, 2%HawkConfig.HOME_REC, 1%g' app/src/main/java/com/github/tvbox/osc/base/App.java
