--- a/.github/workflows/TBox_build.yml
+++ b/.github/workflows/TBox_build.yml
@@ -11,8 +11,8 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - userName: wwz09
-            repoName: TBox
+          - userName: takagen99
+            repoName: Box
             branchName: main
    
     steps:
