--- a/.github/workflows/QBox_build.yml
+++ b/.github/workflows/QBox_build.yml
@@ -105,7 +105,7 @@ jobs:
           rm -rf apk/
           mkdir -p apk/
           for file in `find ~ -name "*.apk" -print`; do
-            mv "$file" apk/${{ matrix.repoName }}_${{ env.tag }}.apk
+            mv "$file" apk/QBox{{ env.tag }}.apk
           done
       
       - name: Upload App To Artifact
