--- a/.github/workflows/QBox_build.yml
+++ b/.github/workflows/QBox_build.yml
@@ -14,7 +14,7 @@ jobs:
           - userName: q215613905
             repoName: TVBoxOS
             branchName: main
-            appName: Box
+            appName: QBox
           
     steps:
       - name: Checkout
@@ -106,7 +106,7 @@ jobs:
           rm -rf apk/
           mkdir -p apk/
           for file in `find ~ -name "*.apk" -print`; do
-            mv "$file" apk/${{ matrix.appName }}_{{ env.tag }}.apk
+            mv "$file" apk/${{ matrix.appName }}_${{ env.tag }}.apk
           done
       
       - name: Upload App To Artifact
