--- a/.github/workflows/MaoTV_build.yml
+++ b/.github/workflows/MaoTV_build.yml
@@ -14,6 +14,7 @@ jobs:
           - userName: wwz09
             repoName: MaoTV
             branchName: main
+            appName: 老猫TV
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -105,7 +106,7 @@ jobs:
           rm -rf apk/
           mkdir -p apk/
           for file in `find ~ -name "*.apk" -print`; do
-            mv "$file" apk/${{ matrix.repoName }}_${{ env.tag }}.apk
+            mv "$file" apk/${{ matrix.appName }}_${{ env.tag }}.apk
           done
       
       - name: Upload App To Artifact
