--- a/.github/workflows/QBox_build.yml
+++ b/.github/workflows/QBox_build.yml
@@ -46,6 +46,10 @@ jobs:
           cp -rf $GITHUB_WORKSPACE/DIY/xwalk_shared_library-23.53.589.4.aar app/libs/xwalk_shared_library-23.53.589.4.aar
           cp -rf $GITHUB_WORKSPACE/DIY/thunder.jar app/libs/thunder.jar
           cp -rf $GITHUB_WORKSPACE/DIY/pyramid.aar app/libs/pyramid.aar
+          cp -rf $GITHUB_WORKSPACE/DIY/png/drawable-hdpi/app_icon.png app/src/main/res/drawable-hdpi/app_icon.png
+          cp -rf $GITHUB_WORKSPACE/DIY/png/drawable-xhdpi/app_icon.png app/src/main/res/drawable-xhdpi/app_icon.png
+          cp -rf $GITHUB_WORKSPACE/DIY/png/drawable-xxhdpi/app_icon.png app/src/main/res/drawable-xxhdpi/app_icon.png
+          cp -rf $GITHUB_WORKSPACE/DIY/png/drawable-xxxhdpi/app_icon.png app/src/main/res/drawable-xxxhdpi/app_icon.png
           sed -i 's%TVBox%QBox%g' app/src/main/res/values/strings.xml
           sed -i 's%(HawkConfig.API_URL, "");%(HawkConfig.API_URL, "https://0a.fit/bbNnz");%g' app/src/main/java/com/github/tvbox/osc/api/ApiConfig.java   
            
