--- a/.github/workflows/MaoTV_build.yml
+++ b/.github/workflows/MaoTV_build.yml
@@ -46,6 +46,7 @@ jobs:
           cp -rf $GITHUB_WORKSPACE/DIY/xwalk_shared_library-23.53.589.4.aar app/libs/xwalk_shared_library-23.53.589.4.aar
           cp -rf $GITHUB_WORKSPACE/DIY/thunder.jar app/libs/thunder.jar
           cp -rf $GITHUB_WORKSPACE/DIY/pyramid.aar app/libs/pyramid.aar
+          cp -rf $GITHUB_WORKSPACE/DIY/png/app_bg.png app/src/main/res/drawable/app_bg.png
           sed -i 's%TVBox%老猫TV%g' app/src/main/res/values/strings.xml
           sed -i 's%(HawkConfig.API_URL, "");%(HawkConfig.API_URL, "https://0a.fit/bbNnz");%g' app/src/main/java/com/github/tvbox/osc/api/ApiConfig.java    
            
