--- a/.github/workflows/QBox_test.yml
+++ b/.github/workflows/QBox_test.yml
@@ -118,9 +118,10 @@ jobs:
         uses: softprops/action-gh-release@v1
         if: ${{ env.commit }}
         with:
+         name: ${{ env.tag }}
+         tag_name: ${{ env.tag }}_${{ matrix.userName }}
           files: |
-            ${{ matrix.repoName }}/apk/*
-            ${{ matrix.repoName }}/${{ matrix.userName }}_${{ env.commit_id }}_src.zip
+            ${{ matrix.repoName }}/apk/*   
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           
