--- a/.github/workflows/QBox_test.yml
+++ b/.github/workflows/QBox_test.yml
@@ -116,12 +116,9 @@ jobs:
           
       - name: Release App
         uses: softprops/action-gh-release@v1
-        if: ${{ env.commit }}
+        if: startsWith(github.ref, 'refs/tags/')
         with:
-          name: ${{ env.tag }}
-          tag_name: ${{ env.tag }}_${{ matrix.userName }}
-          body_path : ${{ matrix.repoName }}/Changelog.txt
-          files: |
+          files:
             ${{ matrix.repoName }}/apk/*
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
