--- a/.github/workflows/QBox_test.yml
+++ b/.github/workflows/QBox_test.yml
@@ -100,8 +100,8 @@ jobs:
           tag_name: ${{ env.tag }}
           body: ${{ env.commit }}
           files: |
-            apk/*.apk
-            TVBoxOSC/source.zip
+            ${{ matrix.repoName }}/apk/*.apk
+            ${{ matrix.repoName }}/source.zip
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
